Added: Remove Question

--- a/edit.html
+++ b/edit.html
@@ -177,7 +177,7 @@
             </div>
           </div>
           <div class="container close text-right py-4">
-            <button type="button" class="btn btn-outline-success mr-3" onclick="submitForms()">Yadda saxla</button>
+            <button type="button" class="btn btn-outline-success mr-3" onclick="addInfo()">Yadda saxla</button>
             <button type="button" class="btn btn-outline-danger remove-button">Ləğv et</button>
           </div>
         </div>
