--- a/mainPage.html
+++ b/mainPage.html
@@ -45,7 +45,7 @@
       </div>
 
       <ul class="list-unstyled components align-self-center d-flex flex-column">
-        <li class="">
+        <li class="active">
           <a href="mainPage.html"><i class="fas fa-rocket"></i> <span id="sideSpan">Dashboard</span> </a>
         </li>
         <li>
@@ -60,8 +60,8 @@
         <li>
           <a href="#" class="surveys"><i class="fas fa-file-alt"></i> <span id="sideSpan">
               Sorğular</span></a>
-          <ul class=" list-unstyled active  align-items-center d-flex flex-column">
-            <li class="active"> <a href="allQueries.html"><i class="fas fa-file"></i> <span
+          <ul class=" list-unstyled dropdown active  align-items-center d-flex flex-column">
+            <li class=""> <a href="allQueries.html"><i class="fas fa-file"></i> <span
                   id="sideSpan">Bütün</span></a></li>
             <li><a href="newform.html"><i class="fas fa-file-alt"></i> <span id="sideSpan">Yarat</span></a></li>
 
