--- a/newUser.html
+++ b/newUser.html
@@ -53,17 +53,17 @@
         <li>
           <a href="#" class="users-nav"><i class="fas fa-users"></i> <span id="sideSpan">
               İstifadəçilər</span></a>
-          <ul class=" list-unstyled active dropdown align-items-center d-flex flex-column">
+          <ul class=" list-unstyled active  align-items-center d-flex flex-column">
             <li> <a href="allUsers.html"><i class="fas fa-users-cog"></i> <span id="sideSpan">Bütün</span></a></li>
-            <li><a href="newUser.html"><i class="fas fa-user-plus"></i> <span id="sideSpan">Yarat</span></a></li>
+            <li class="active"><a href="newUser.html"><i class="fas fa-user-plus"></i> <span id="sideSpan">Yarat</span></a></li>
 
           </ul>
         </li>
         <li>
           <a href="#" class="surveys"><i class="fas fa-file"></i> <span id="sideSpan">
               Sorğular</span></a>
-          <ul class=" list-unstyled active  align-items-center d-flex flex-column">
-            <li class="active"> <a href="allQueries.html"><i class="fas fa-file-alt"></i> <span
+          <ul class=" list-unstyled dropdown active  align-items-center d-flex flex-column">
+            <li> <a href="allQueries.html"><i class="fas fa-file-alt"></i> <span
                   id="sideSpan">Bütün</span></a></li>
             <li><a href="newform.html"><i class="fas fa-file"></i> <span id="sideSpan">Yarat</span></a></li>
 
