Fixes some features

--- a/complete.html
+++ b/complete.html
@@ -133,7 +133,7 @@
                   Cavab <input type="text" />
                 </div>
                 <div class="other text-right pb-5 px-3">
-                  <button type="button" class="btn btn-outline-success" onclick="confirm()">Təsdiqlə</button>
+                  <button type="button" class="btn btn-outline-success" onclick="confirmForm()">Təsdiqlə</button>
                 </div>
               </div>
             </div>
