--- a/allQueries.html
+++ b/allQueries.html
@@ -84,28 +84,46 @@
         <div class="container">
           <div class="">
             <table
-              class="table table-striped table-responsive-xl  table-light col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 mx-auto ">
+              class="table table-striped table-responsive-xl  table-light col-xl-12 col-lg-12 col-md-12 col-sm-12  mx-auto ">
+
               <caption class="table-active col-12">
 
                 <span>Bütün Sorğular </span>
 
+                <a class="export-button btn btn-md  btn-outline-primary " href="">Export </a>
 
-                <a class="  add-button btn btn-md  btn-outline-primary " href="./newform.html">Əlavə et</a>
+                <a class=" add-button btn btn-m  btn-outline-primary " href="./newform.html">Əlavə et</a>
 
               </caption>
 
               <thead>
+
+                <th scope="col">
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="select-all">
+                    <label class="custom-control-label" for="select-all"></label>
+                  </div>
+
+                </th>
                 <th scope="col">#</th>
                 <th scope="col">Ad</th>
                 <th scope="col">Açıqlama</th>
                 <th scope="col">Tarix</th>
-                <th scope="col">Müraciət ayı</th>
-                </tr>
+                <th scope="col">Müraciət sayı</th>
+                <th scope="col">Əməliyyatlar</th>
+
               </thead>
               <tbody>
 
                 <tr>
-                  <th scope="row">1</th>
+                  <td scope="col">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="customCheck1">
+                      <label class="custom-control-label" for="customCheck1"></label>
+                    </div>
+
+                  </td>
+                  <td scope="">1</td>
                   <td>Custumor Ratio</td>
                   <td>lorem lor...</td>
                   <td>31/12/20</td>
@@ -120,75 +138,96 @@
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td scope="col">
+                    <div class="custom-control custom-checkbox">
+                      <input type="checkbox" class="custom-control-input" id="customCheck3">
+                      <label class="custom-control-label" for="customCheck3"></label>
+                    </div>
+
+                  </td>
+                  <td scope="col">2</td>
+                  <td scope="col">Custumor Ratio</td>
+                  <td scope="col">lorem lor...</td>
+                  <td scope="col">31/12/20</td>
+                  <td scope="col">10</td>
+                  <td scope="col" class="buttons">
+                    <button type="button"><a href="./edit.html" class="btn text-success">Redaktə et</a></button>
+                    <button type="button"><a href="./results.html" class="btn edit text-primary">Nəticələr</a></button>
+                    <button type="button" class="btn delete-button text-danger" data-toggle="modal"
+                      data-target="#exampleModal">Sil</button>
+                    <button type="button"><a class="btn text-success" href="./complete.html">Tamamla</a></button>
+                  </td>
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
                 </tr>
 
                 <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <th scope="col"></th>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
+                  <td scope="col"></td>
                 </tr>
 
                 <tr>
