--- a/complete.html
+++ b/complete.html
@@ -80,7 +80,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
