--- a/review.html
+++ b/review.html
@@ -78,7 +78,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
