--- a/profile.html
+++ b/profile.html
@@ -119,7 +119,7 @@
 
                       <label for="username">Soyad</label>
                       <input type="text" class="form-control" name="surname" id="surname" placeholder="Soyad" required>
-                      <label for="username">Enailgit</label>
+                      <label for="username">Email</label>
                       <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
 
                       <div class="save"> <button type="submit" class="btn btn-outline-primary" onclick="save()">Yadda
