adds some feature fixes

--- a/allQueries.html
+++ b/allQueries.html
@@ -72,13 +72,11 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
     </nav>
-
-    
     <div id="content" class="">
       <div class="mobileMenuIcon"><i class="fa fa-bars"></i></div>
       <section class="users min-vh-100 d-flex align-items-center justify-content-center py-4">
