--- a/edit.html
+++ b/edit.html
@@ -79,7 +79,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
