--- a/results.html
+++ b/results.html
@@ -72,7 +72,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
@@ -94,6 +94,7 @@
 
               <thead>
                 <th scope="col">#</th>
+                <th scope="col">Username</th>
                 <th scope="col">Ad</th>
                 <th scope="col">Soyad</th>
                 <th scope="col">Tarix</th>
@@ -103,13 +104,13 @@
                 <th scope="col">Sual #4</th>
                 <th scope="col">Sual #5</th>
                 <th scope="col"></th>
-                <th scope="col"></th>
                 </tr>
               </thead>
               <tbody>
 
                 <tr>
                   <th scope="row">1</th>
+                  <td>narmin_aliyeva</td>
                   <td>Leyla</td>
                   <td>Mammadova</td>
                   <td>06/06/2020<br>16:20</td>
@@ -135,38 +136,12 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                </tr>
-
-                <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
                   <td></td>
                 </tr>
 
                 <tr>
                   <th scope="row"></th>
                   <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                </tr>
-
-                <tr>
-                  <th scope="row"></th>
                   <td></td>
                   <td></td>
                   <td></td>
@@ -191,19 +166,6 @@
                   <td></td>
                   <td></td>
                   <td></td>
-                </tr>
-
-                <tr>
-                  <th scope="row"></th>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
                   <td></td>
                 </tr>
 
@@ -219,6 +181,22 @@
                   <td></td>
                   <td></td>
                   <td></td>
+                  <td></td>
+                </tr>
+
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
                 </tr>
 
                 <tr>
@@ -233,10 +211,42 @@
                   <td></td>
                   <td></td>
                   <td></td>
+                  <td></td>
                 </tr>
 
                 <tr>
                   <th scope="row"></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr>
+
+                <tr>
+                  <th scope="row"></th>
+                  <td></td>
                   <td></td>
                   <td></td>
                   <td></td>
