--- a/review.html
+++ b/review.html
@@ -78,7 +78,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
@@ -99,95 +99,55 @@
                     readonly>
                 </p>
                 <p class="firstquestion">
-                  <input type="text" required placeholder="İlk sualımız budur ki,..." class="othertype">
+                  <input type="text" required placeholder="İlk sualımız budur ki,...">
                 </p>
                 <div class="checksection">
-                  <label><input type="checkbox" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="checkbox" /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="checkbox" /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="checkbox" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD:inspect.html
-                  Digər <input class="othertype" type="text" value="Nümunə cavab" readonly />
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b:review.html
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
                 </div>
                 <hr>
 
                 <p class="firstquestion">
-<<<<<<< HEAD
                   <input type="text" required placeholder="İlk sualımız budur ki,...">
-=======
-                  <input type="text" required placeholder="İlk sualımız budur ki,..." class="othertype">
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
                 </p>
                 <div class="radiosection">
-                  <label><input type="radio" name="rad" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="radio" name="rad" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="radio" name="rad" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="radio" name="rad" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="radio" name="rad" /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="radio" name="rad" id="reviewDisable" /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="radio" name="rad" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="radio" name="rad" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD:inspect.html
-                  Digər <input class="othertype" type="text" value="Nümunə cavab" readonly />
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b:review.html
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
                 </div>
                 <hr>
 
                 <p class="firstquestion">
-<<<<<<< HEAD
                   <input type="text" required placeholder="İlk sualımız budur ki,..." readonly>
                 </p>
                 <div class="opensection">
                   Cavab <input type="text" value="Nümunə cavab" readonly />
-=======
-                  <input type="text" required placeholder="İlk sualımız budur ki,..." readonly class="othertype">
-                </p>
-                <div class="opensection">
-<<<<<<< HEAD:inspect.html
-                  Cavab <input class="othertype" type="text" value="Nümunə cavab" readonly />
-=======
-                  Cavab <input type="text" value="Nümunə cavab" readonly />
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b:review.html
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
                 </div>
                 <hr>
 
                 <p class="firstquestion">
-<<<<<<< HEAD
                   <input type="text" required placeholder="İlk sualımız budur ki,..." readonly>
-=======
-                  <input type="text" required placeholder="İlk sualımız budur ki,..." readonly class="othertype">
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
                 </p>
                 <div class="checksection">
-                  <label><input type="checkbox" /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="checkbox" /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="checkbox" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-                  <label><input type="checkbox" checked /><input class="text" type="text" value="Birinci cavab"
+                  <label><input type="checkbox" id="reviewDisable" checked /><input class="text" type="text" value="Birinci cavab"
                       readonly></label><br />
-<<<<<<< HEAD
-=======
-<<<<<<< HEAD:inspect.html
-                  Digər <input class="othertype" type="text" value="Nümunə cavab" readonly />
-=======
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b:review.html
->>>>>>> 092d96cd6d5abbac7d60d93b7a851a7f427cc37b
                 </div>
               </div>
             </div>
