--- a/mainPage.html
+++ b/mainPage.html
@@ -77,7 +77,7 @@
 
       </ul>
       <div class="footer text-center">
-        <a href="./index.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
+        <a href="./mainPage.html"><i class="fas fa-sign-out-alt"></i> <span id="sideSpan">Profildən
             çıxış</span></a>
       </div>
 
@@ -181,19 +181,21 @@
                     <div class="card-body">
                       <div class="card-content d-flex justify-content-center align-items-center">
 
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
-
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                        <a href="results.html">
+                          <div class="small-card-text">
+                            <h3>Research One</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
+  
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
-                        </div>
+                        </a>
                       </div>
 
                     </div>
@@ -204,19 +206,21 @@
                     <div class="card-body">
                       <div class="card-content d-flex justify-content-center align-items-center">
 
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
-
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                        <a href="results.html">
+                          <div class="small-card-text">
+                            <h3>Research One</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
+  
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
-                        </div>
+                        </a>
 
                       </div>
 
@@ -227,21 +231,21 @@
                   <div class="card card-small col-md-3 col-12">
                     <div class="card-body">
                       <div class="card-content d-flex justify-content-center align-items-center">
-
-                        <div class="small-card-text">
-                          <h3>Research One <img class="research-button" src="assets/img/Group 616.png" alt=""></h3>
-                          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
-                            voluptatum
-                            perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
-                            cupiditate
-                            doloremque ab architecto.</p>
-
-                          <div class="row">
-                            <span class="read-number ">
-                              <img src="assets/img/Group 548.png" alt=""> 113</span>
+                        <a href="results.html">
+                          <div class="small-card-text">
+                            <h3>Research One </h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium, rem modi! Maxime
+                              voluptatum
+                              perspiciatis ab quidem deserunt totam quia hic natus? Deleniti, magni illum enim veniam
+                              cupiditate
+                              doloremque ab architecto.</p>
+  
+                            <div class="row">
+                              <span class="read-number ">
+                                <img src="assets/img/Group 548.png" alt=""> 113</span>
+                            </div>
                           </div>
-                        </div>
-
+                        </a>
                       </div>
 
                     </div>
@@ -265,4 +269,5 @@
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/scripts.js"></script>
 </body>
+
 </html>
