--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Profile</title>
-
+  <link rel='icon' href='assets/img/survey.png' type= ' image/x-icon'/>
   <!-- Bootstrap Styles-->
   <link href="assets/lib/bootstrap.css" rel="stylesheet" />
   <link href="assets/lib/bootstrap-grid.css" rel="stylesheet" />
